--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dołącz do grupy Telegram</title>
+  <title>Join the Telegram group </title>
   <meta http-equiv="refresh" content="0; url=https://t.me/+2deIGn9wC0diN2I0">
   <script>
     setTimeout(function () {
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <h1>Przekierowuję do Telegrama...</h1>
-  <p>Jeśli nic się nie dzieje, <a href="https://t.me/+2deIGn9wC0diN2I0">kliknij tutaj</a>.</p>
+  <h1>Redirect to Telegram ...</h1>
+  <p>If nothing happens , <a href="https://t.me/+2deIGn9wC0diN2I0">Click here </a>.</p>
 </body>
 </html>
