--- a/index.html
+++ b/index.html
@@ -2,39 +2,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Join Telegram Group</title>
-  <script>
-    function isIOS() {
-      return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding-top: 60px;
+      background-color: #f4f4f4;
     }
-
-    function isAndroid() {
-      return /android/i.test(navigator.userAgent);
+    .button {
+      display: inline-block;
+      margin: 10px;
+      padding: 15px 25px;
+      font-size: 16px;
+      text-decoration: none;
+      color: white;
+      background-color: #0088cc;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
     }
-
-    function redirect() {
-      const telegramLink = "https://t.me/+2deIGn9wC0diN2I0";
-
-      // Try to open Telegram
-      window.location.href = telegramLink;
-
-      // Fallback to app store after 2 seconds
-      setTimeout(() => {
-        if (isIOS()) {
-          window.location.href = "https://apps.apple.com/app/telegram-messenger/id686449807";
-        } else if (isAndroid()) {
-          window.location.href = "https://play.google.com/store/apps/details?id=org.telegram.messenger";
-        } else {
-          window.location.href = "https://web.telegram.org/";
-        }
-      }, 2000);
+    .button:hover {
+      background-color: #0070a3;
     }
-  </script>
+  </style>
 </head>
-<body onload="redirect()" style="text-align: center; font-family: sans-serif; padding-top: 50px;">
-  <h1>Redirecting to Telegram...</h1>
-  <p>If nothing happens, <a href="https://t.me/+2deIGn9wC0diN2I0">click here</a>.</p>
+<body>
+  <h1>Join our Telegram Group</h1>
+  <p>If you already have Telegram installed, tap the button below:</p>
+  <a class="button" id="joinBtn" href="#">Open in Telegram</a>
+  <p style="margin-top: 20px;">If nothing happens, you'll be redirected to download Telegram.</p>
+
+  <script>
+    document.getElementById("joinBtn").addEventListener("click", function(e) {
+      e.preventDefault();
+      // Try to open Telegram using tg:// scheme
+      window.location.href = "tg://join?invite=2deIGn9wC0diN2I0";
+      // Fallback after 2 seconds
+      setTimeout(function() {
+        window.location.href = "https://telegram.org/dl";
+      }, 2000);
+    });
+  </script>
 </body>
 </html>
