--- a/index.html
+++ b/index.html
@@ -1,68 +1,49 @@
+
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dołącz do Puffin Clouds</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Join Telegram Group</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #f8f4ff, #dcd3ea);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
-      min-height: 100vh;
+      font-family: sans-serif;
       text-align: center;
-    }
-    img {
-      width: 180px;
-      margin-top: 40px;
-    }
-    h1 {
-      margin: 20px 0 10px;
-      font-size: 28px;
-      color: #333;
-    }
-    p {
-      color: #555;
-      max-width: 300px;
-    }
-    .btn {
-      display: block;
-      width: 260px;
-      padding: 15px;
-      margin: 15px;
-      font-size: 16px;
-      font-weight: bold;
+      padding-top: 100px;
+      background: url('logo.png') no-repeat center center fixed;
+      background-size: cover;
       color: white;
-      background-color: #5b3cc4;
-      border: none;
-      border-radius: 10px;
-      text-decoration: none;
+      text-shadow: 0 0 5px black;
     }
-    .btn.secondary {
-      background-color: #888;
+    .button {
+      display: inline-block;
+      margin: 20px;
+      padding: 15px 30px;
+      font-size: 18px;
+      text-decoration: none;
+      color: white;
+      background-color: #0088cc;
+      border-radius: 10px;
+      transition: background-color 0.3s ease;
+    }
+    .button:hover {
+      background-color: #0070a3;
     }
   </style>
 </head>
 <body>
-  <img src="logo.png" alt="Puffin Clouds Logo"/>
-  <h1>Puffin Clouds</h1>
-  <p>Dołącz do naszego kanału Telegram, aby być na bieżąco!</p>
-  <a class="btn" href="tg://join?invite=2deIGn9wC0diN2I0">Mam Telegram – Dołącz</a>
-  <a class="btn secondary" id="fallback">Nie mam Telegrama – Pobierz</a>
+  <h1>Join our Telegram Group</h1>
+  <p>Click the button below to join. If Telegram doesn't open, you'll be redirected to download the app.</p>
+  <a class="button" id="openBtn" href="#">Join Now</a>
 
   <script>
-    document.getElementById('fallback').addEventListener('click', function() {
-      var ua = navigator.userAgent.toLowerCase();
-      if (ua.includes("iphone") || ua.includes("ipad")) {
-        window.location.href = "https://apps.apple.com/app/telegram-messenger/id686449807";
-      } else {
-        window.location.href = "https://play.google.com/store/apps/details?id=org.telegram.messenger";
-      }
+    document.getElementById("openBtn").addEventListener("click", function(e) {
+      e.preventDefault();
+      window.location.href = "https://t.me/+2deIGn9wC0diN2I0";
+      setTimeout(function() {
+        window.location.href = "https://telegram.org/dl";
+      }, 2500);
     });
   </script>
 </body>
