--- a/index.html
+++ b/index.html
@@ -16,35 +16,51 @@
       color: white;
       text-shadow: 0 0 5px black;
     }
-    .button {
+    .container {
+      background-color: rgba(0, 0, 0, 0.6);
       display: inline-block;
-      margin: 20px;
+      padding: 30px;
+      border-radius: 12px;
+    }
+    .button {
       padding: 15px 30px;
       font-size: 18px;
-      text-decoration: none;
       color: white;
       background-color: #0088cc;
-      border-radius: 10px;
-      transition: background-color 0.3s ease;
+      border-radius: 8px;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 20px;
     }
     .button:hover {
       background-color: #0070a3;
     }
+    .notice {
+      margin-top: 20px;
+      font-size: 16px;
+    }
+    .footer {
+      position: fixed;
+      bottom: 15px;
+      width: 100%;
+      text-align: center;
+      font-size: 14px;
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
-  <h1>Join our Telegram Group</h1>
-  <p>Click the button below to join. If Telegram doesn't open, you'll be redirected to download the app.</p>
-  <a class="button" id="openBtn" href="#">Join Now</a>
+  <div class="container">
+    <h1>Join our Telegram group</h1>
+    <p class="notice">
+      This invitation link only works if the Telegram app is installed.<br />
+      <strong>Please install Telegram before clicking the button.</strong>
+    </p>
+    <a class="button" href="https://t.me/+2deIGn9wC0diN2I0">Join on Telegram</a>
+  </div>
 
-  <script>
-    document.getElementById("openBtn").addEventListener("click", function(e) {
-      e.preventDefault();
-      window.location.href = "https://t.me/+2deIGn9wC0diN2I0";
-      setTimeout(function() {
-        window.location.href = "https://telegram.org/dl";
-      }, 2500);
-    });
-  </script>
+  <div class="footer">
+    🌐 🇬🇧 EN | 🇵🇱 PL
+  </div>
 </body>
 </html>
