--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </style>
 </head>
 <body>
-  <img src="logo.jpg" alt="Puffin Clouds" class="logo">
+  <img src="logo.png" alt="Puffin Clouds" class="logo">
   <h1>Puffin Clouds</h1>
   <p class="description">Join our Telegram channel to stay up to date!</p>
 
