--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Puffin Clouds – Telegram</title>
   <style>
     body {
@@ -18,10 +18,16 @@
     }
     img.logo {
       max-width: 80%%;
-      max-height: 300px;
-      margin-top: 60px;
+      max-height: 280px;
+      margin-top: 50px;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    img.logo-small {
+      margin-top: 15px;
+      width: 120px;
+      height: auto;
+      opacity: 0.85;
     }
     h1 {
       margin: 30px 0 10px;
@@ -47,6 +53,8 @@
     a.join {
       background-color: #7a45e5;
       color: white;
+      font-size: 20px;
+      padding: 18px 36px;
     }
     a.download {
       background-color: #444;
@@ -62,6 +70,8 @@
       margin-top: 40px;
       font-size: 13px;
       color: #666;
+      padding: 20px;
+      max-width: 90%%;
     }
   </style>
 </head>
@@ -70,15 +80,20 @@
   <h1>Puffin Clouds</h1>
   <p class="description">Join our Telegram channel to stay up to date!</p>
 
-  <a class="button join" href="https://t.me/+2deIGn9wC0diN2I0">I have Telegram – Join</a>
+  <p><strong>If you don’t have Telegram yet:</strong></p>
   <a class="button download" href="https://telegram.org/dl">Download Telegram</a>
 
+  <p><strong>Then, when it's installed:</strong></p>
+  <a class="button join" href="https://t.me/+2deIGn9wC0diN2I0">Join @PuffinClouds</a>
+
+  <img src="logo-small.png" alt="Puffin Clouds Logo" class="logo-small" />
+
   <p class="notice">
-    This invitation link only works if the Telegram app is installed.<br>
-    Please install Telegram before clicking the join button.
+    This invitation link only works if the Telegram app is installed.
   </p>
 
   <div class="footer">
+    ⚠️ On iOS devices, private group invitations may not work correctly in the browser.<br/>
     🌐 We speak English 🇬🇧 and Polish 🇵🇱
   </div>
 </body>
