--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
       align-items: center;
       text-align: center;
       min-height: 100vh;
-      backdrop-filter: brightness(0.96);
     }
     .overlay {
-      background-color: rgba(255,255,255,0.88);
+      background-color: rgba(255, 255, 255, 0.75);
       width: 100%;
       max-width: 600px;
       padding: 20px;
       margin-top: 180px;
       border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.08);
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.08);
     }
     h1 {
       font-size: 28px;
