--- a/index.html
+++ b/index.html
@@ -3,89 +3,81 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Puffin Clouds – Telegram</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Puffin Clouds – Telegram Invite</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
-      background: url('logo-bg.png') no-repeat center top;
-      background-size: cover;
-      background-attachment: fixed;
+      font-family: 'Segoe UI', sans-serif;
+      height: 100%;
+      background: #ece9f0 url('logo-bg.png') no-repeat center center;
+      background-size: contain;
       display: flex;
-      flex-direction: column;
       align-items: center;
-      text-align: center;
-      min-height: 100vh;
+      justify-content: center;
     }
-    .overlay {
-      background-color: rgba(255, 255, 255, 0.45);
-      width: 100%;
-      max-width: 600px;
-      padding: 20px;
-      margin-top: 180px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.08);
+    .card {
+      background: rgba(255, 255, 255, 0.45);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+      padding: 40px 30px;
+      text-align: center;
+      max-width: 400px;
+      width: 90%;
+      color: #333;
     }
     h1 {
-      font-size: 28px;
       margin-top: 0;
+      font-size: 28px;
     }
-    p.description {
-      color: #555;
-      margin-bottom: 30px;
+    p {
+      font-size: 15px;
+      margin: 10px 0 20px;
     }
     a.button {
       display: block;
       margin: 10px auto;
-      padding: 14px 30px;
+      padding: 14px 28px;
+      border-radius: 12px;
       font-size: 16px;
       font-weight: bold;
-      border-radius: 8px;
       text-decoration: none;
-      width: 80%;
-      max-width: 320px;
-    }
-    a.join {
-      background-color: #7a45e5;
       color: white;
-      font-size: 20px;
-      padding: 18px 36px;
+      width: 80%;
+      max-width: 300px;
+      transition: 0.3s ease;
     }
     a.download {
-      background-color: #444;
-      color: white;
+      background: #333;
     }
-    .notice {
-      font-size: 14px;
-      color: #696969;
-      margin-top: 16px;
+    a.download:hover {
+      background: #111;
+    }
+    a.join {
+      background: #7a45e5;
+      font-size: 18px;
+    }
+    a.join:hover {
+      background: #5e36c5;
     }
     .footer {
-      margin-top: 30px;
-      font-size: 13px;
-      color: #666;
+      font-size: 12px;
+      margin-top: 25px;
+      color: #555;
     }
   </style>
 </head>
 <body>
-  <div class="overlay">
+  <div class="card">
     <h1>Puffin Clouds</h1>
-    <p class="description">Join our Telegram channel to stay up to date!</p>
-
-    <p><strong>If you don’t have Telegram yet:</strong></p>
-    <a class="button download" href="https://telegram.org/dl">Download Telegram</a>
-
-    <p><strong>Then, when it's installed:</strong></p>
-    <a class="button join" href="https://t.me/+2deIGn9wC0diN2I0">Join @PuffinClouds</a>
-
-    <p class="notice">
-      This invitation link only works if the Telegram app is installed.
-    </p>
-
+    <p>Please install Telegram before joining.<br>This invitation link works only if the app is installed.</p>
+    <a class="button download" href="https://telegram.org/dl">📥 Download Telegram</a>
+    <a class="button join" href="https://t.me/+2deIGn9wC0diN2I0">🚀 Join @PuffinClouds</a>
     <div class="footer">
-      ⚠️ On iOS devices, private group invitations may not work correctly in the browser.<br/>
+      ⚠️ On iOS, private group links may not open directly.<br>
       🌐 We speak English 🇬🇧 and Polish 🇵🇱
     </div>
   </div>
