--- a/index.html
+++ b/index.html
@@ -3,74 +3,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Puffin Clouds – Telegram Invite</title>
+  <title>Puffin Clouds – Telegram</title>
   <style>
+    /* Mobile-first: centered logo as subtle blurred background */
+    :root {
+      --card-gap-min: 260px;
+      --card-gap-vh: 46vh;
+      --card-gap-max: 560px;
+    }
     html, body {
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      min-height: 100%;
-      background: #ece9f0 url('logo-bg.png') no-repeat center center fixed;
-      background-size: cover;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      min-height: 100vh;
+      background: #ece9f0 url('logo-bg.png') no-repeat center center;
+      background-size: contain;
+      background-attachment: scroll;
     }
-    .card {
-      background: rgba(255, 255, 255, 0.45);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border-radius: 20px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
-      padding: 40px 30px;
+    /* Front puffin above the content */
+    .puffin-front {
+      position: fixed;
+      left: 50%;
+      top: calc(50vh - 12px); /* aligns around the visual center */
+      transform: translate(-50%, -50%);
+      width: min(60vw, 520px);
+      max-width: 520px;
+      z-index: 5;
+      pointer-events: none; /* no accidental taps */
+    }
+    /* Content card */
+    .overlay {
+      position: relative;
+      z-index: 10;
+      background: rgba(255,255,255,0.25); /* 25% transparent so background logo stays visible */
+      backdrop-filter: blur(6px);          /* adds readability */
+      -webkit-backdrop-filter: blur(6px);
+      width: 100%;
+      max-width: 600px;
+      padding: 20px;
+      margin: clamp(var(--card-gap-min), var(--card-gap-vh), var(--card-gap-max)) 16px 24px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.08);
       text-align: center;
-      max-width: 400px;
-      width: 90%;
-      color: #333;
+      color: #222;
     }
-    h1 { margin-top: 0; font-size: 28px; }
-    p { font-size: 15px; margin: 10px 0 20px; }
+    h1 { font-size: 28px; margin: 0 0 8px; }
+    p.description { color: #555; margin-bottom: 22px; }
     a.button {
-      display: block; margin: 10px auto; padding: 14px 28px;
-      border-radius: 12px; font-size: 16px; font-weight: bold;
-      text-decoration: none; color: white; width: 80%; max-width: 300px;
-      transition: 0.3s ease;
+      display: block;
+      margin: 10px auto;
+      padding: 14px 30px;
+      font-size: 16px;
+      font-weight: 700;
+      border-radius: 8px;
+      text-decoration: none;
+      width: 80%;
+      max-width: 320px;
+      color: #fff;
     }
-    a.download { background: #333; }
-    a.download:hover { background: #111; }
-    a.join { background: #7a45e5; font-size: 18px; }
-    a.join:hover { background: #5e36c5; }
-    .footer { font-size: 12px; margin-top: 25px; color: #555; }
-    @media (max-width: 768px) {
-      html, body {
-        background: #ece9f0 url('logo-bg.png') no-repeat top center;
-        background-size: contain !important;
-        background-attachment: scroll !important;
-        align-items: flex-start !important;
-        justify-content: flex-start !important;
-      }
-      body {
-        padding-top: clamp(320px, 92vw, 620px) !important;
-      }
-      .card {
-        margin: 12px auto 24px !important;
-        width: min(92vw, 420px) !important;
-        padding: 24px 18px !important;
-        backdrop-filter: none !important;
-        -webkit-backdrop-filter: none !important;
-        background: rgba(255,255,255,0.88) !important;
-      }
+    a.join { background-color: #7a45e5; font-size: 20px; padding: 18px 36px; }
+    a.download { background-color: #444; }
+    .notice { font-size: 14px; color: #666; margin-top: 14px; }
+    .footer { margin-top: 24px; font-size: 13px; color: #666; }
+
+    /* Desktop fallback (in case someone opens it) */
+    @media (min-width: 769px){
+      .overlay { margin-left:auto; margin-right:auto; }
+      .puffin-front { width: 420px; top: 46vh; }
     }
   </style>
 </head>
 <body>
-  <div class="card">
+  <!-- Front puffin on top of the blurred background -->
+  <img class="puffin-front" src="puffin-front.png" alt="Puffin" />
+
+  <div class="overlay">
     <h1>Puffin Clouds</h1>
-    <p>Please install Telegram before joining.<br>This invitation link works only if the app is installed.</p>
-    <a class="button download" href="https://telegram.org/dl">📥 Download Telegram</a>
-    <a class="button join" href="https://t.me/+2deIGn9wC0diN2I0">🚀 Join @PuffinClouds</a>
+    <p class="description">Join our Telegram channel to stay up to date!</p>
+
+    <p><strong>If you don’t have Telegram yet:</strong></p>
+    <a class="button download" href="https://telegram.org/dl">Download Telegram</a>
+
+    <p><strong>Then, when it's installed:</strong></p>
+    <a class="button join" href="https://t.me/+2deIGn9wC0diN2I0">Join @PuffinClouds</a>
+
+    <p class="notice">
+      This invitation link only works if the Telegram app is installed.
+    </p>
+
     <div class="footer">
-      ⚠️ On iOS, private group links may not open directly.<br>
+      ⚠️ On iOS devices, private group invitations may not work correctly in the browser.<br/>
       🌐 We speak English 🇬🇧 and Polish 🇵🇱
     </div>
   </div>
