--- a/index.html
+++ b/index.html
@@ -6,79 +6,59 @@
   <title>Puffin Clouds – Telegram</title>
   <style>
     :root {
-      /* change to 'cover' if wolisz wypełnienie całego ekranu */
-      --bg-fit: contain; 
-      --card-width: min(92vw, 560px);
+      --bg-fit: cover; /* use 'cover' to fill; change to 'contain' if you prefer full logo visible */
     }
-    /* brak przewijania */
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100svh;           /* pełny ekran na mobile (pomija paski) */
-      overflow: hidden;         /* blokada scrolla */
+      margin: 0; padding: 0;
+      height: 100svh; overflow: hidden;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: #ece9f0 url('logo-bg.webp') no-repeat center center / var(--bg-fit);
-      touch-action: none;       /* dodatkowa blokada przewijania gestem */
+      background: #ece9f0 url('background.webp') no-repeat center center / var(--bg-fit);
     }
-    /* kontener wyrównany na środku ekranu */
-    .screen {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      display: grid;
-      place-items: center;      /* środek ekranu */
+    .screen { position: relative; width:100%; height:100%; }
+    /* Puffin like in logo (no legs), fixed at the very top */
+    .puffin-front {
+      position: fixed; top: 12px; left: 50%; transform: translateX(-50%);
+      width: min(42vw, 420px); max-width: 420px; z-index: 10; pointer-events: none;
     }
     .overlay {
-      width: var(--card-width);
+      position: absolute; inset: 0;
+      display: grid; place-items: center;
+    }
+    .card {
+      width: min(92vw, 560px);
       background: rgba(255,255,255,0.25);
       backdrop-filter: blur(6px);
       -webkit-backdrop-filter: blur(6px);
-      border-radius: 14px;
-      box-shadow: 0 6px 20px rgba(0,0,0,.12);
-      color: #222;
-      text-align: center;
-      padding: 18px 16px 22px;
+      border-radius: 14px; box-shadow: 0 6px 20px rgba(0,0,0,.12);
+      padding: 18px 16px 22px; text-align: center; color:#222;
+      margin-top: 8vh;
     }
     h1 { margin: 6px 0 10px; font-size: 28px; }
-    .logo-inline {
-      display: block;
-      width: min(78vw, 520px);
-      height: auto;
-      margin: 4px auto 10px;
-    }
     p.description { color:#555; margin: 8px 0 18px; }
     .button {
-      display: block;
-      width: min(86vw, 340px);
-      margin: 10px auto;
-      padding: 14px 18px;
-      border-radius: 10px;
-      font-weight: 700;
-      font-size: 16px;
-      text-decoration: none;
-      color: #fff;
+      display:block; width:min(86vw,340px); margin:10px auto; padding:14px 18px;
+      border-radius:10px; font-weight:700; font-size:16px; text-decoration:none; color:#fff;
     }
     .download { background:#3a3a3a; }
-    .join { background:#7a45e5; font-size: 18px; }
-    .footer { margin-top: 14px; font-size:12px; color:#666; }
+    .join { background:#7a45e5; font-size:18px; }
+    .footer { margin-top:14px; font-size:12px; color:#666; }
   </style>
 </head>
 <body>
   <div class="screen">
+    <img class="puffin-front" src="puffin-front.png" alt="Puffin" />
     <div class="overlay">
-      <h1>Puffin Clouds</h1>
-      <img class="logo-inline" src="logo-inline.png" alt="Puffin Clouds logo" />
-      <p class="description">Join our Telegram channel to stay up to date!</p>
-
-      <p><strong>If you don’t have Telegram yet:</strong></p>
-      <a class="button download" href="https://telegram.org/dl">Download Telegram</a>
-
-      <p><strong>Then, when it's installed:</strong></p>
-      <a class="button join" href="https://t.me/+2deIGn9wC0diN2I0">Join @PuffinClouds</a>
-
-      <div class="footer">
-        ⚠️ On iOS devices, private group invitations may not work correctly in the browser.<br/>
-        🌐 We speak English 🇬🇧 and Polish 🇵🇱
+      <div class="card">
+        <h1>Puffin Clouds</h1>
+        <p class="description">Join our Telegram channel to stay up to date!</p>
+        <p><strong>If you don’t have Telegram yet:</strong></p>
+        <a class="button download" href="https://telegram.org/dl">Download Telegram</a>
+        <p><strong>Then, when it's installed:</strong></p>
+        <a class="button join" href="https://t.me/+2deIGn9wC0diN2I0">Join @PuffinClouds</a>
+        <div class="footer">
+          ⚠️ On iOS devices, private group invitations may not work correctly in the browser.<br/>
+          🌐 We speak English 🇬🇧 and Polish 🇵🇱
+        </div>
       </div>
     </div>
   </div>
