--- a/index.html
+++ b/index.html
@@ -6,47 +6,59 @@
   <title>Puffin Clouds – Telegram</title>
   <style>
     :root {
-      --bg-fit: cover; /* use 'cover' to fill; change to 'contain' if you prefer full logo visible */
+      --card-width: min(92vw, 560px);
+      --logo-max: 620px;
+      --logo-vw: 64vw;
     }
     html, body {
       margin: 0; padding: 0;
-      height: 100svh; overflow: hidden;
+      height: 100svh; overflow: hidden;             /* no scroll */
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: #ece9f0 url('background.webp') no-repeat center center / var(--bg-fit);
+      background: #ece9f0 url('background.webp') no-repeat center center / cover;
     }
     .screen { position: relative; width:100%; height:100%; }
-    /* Puffin like in logo (no legs), fixed at the very top */
-    .puffin-front {
+    /* Full logo at the top, always visible */
+    .logo-full {
       position: fixed; top: 12px; left: 50%; transform: translateX(-50%);
-      width: min(42vw, 420px); max-width: 420px; z-index: 10; pointer-events: none;
+      width: min(var(--logo-vw), var(--logo-max));
+      max-width: var(--logo-max);
+      z-index: 10;
+      pointer-events: none;
+      filter: drop-shadow(0 8px 18px rgba(0,0,0,.18));
     }
+    /* Center card under the logo, with strong readability */
     .overlay {
       position: absolute; inset: 0;
       display: grid; place-items: center;
+      padding-top: 12vh; /* room below the top logo */
     }
     .card {
-      width: min(92vw, 560px);
-      background: rgba(255,255,255,0.25);
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
-      border-radius: 14px; box-shadow: 0 6px 20px rgba(0,0,0,.12);
-      padding: 18px 16px 22px; text-align: center; color:#222;
-      margin-top: 8vh;
+      width: var(--card-width);
+      background: rgba(255,255,255,0.30);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      border-radius: 16px;
+      box-shadow: 0 6px 24px rgba(0,0,0,.16);
+      text-align: center;
+      color: #1f1f1f;
+      padding: 22px 18px 24px;
     }
-    h1 { margin: 6px 0 10px; font-size: 28px; }
-    p.description { color:#555; margin: 8px 0 18px; }
+    h1 { margin: 4px 0 12px; font-size: 28px; letter-spacing: .2px; }
+    p.description { color:#56565c; margin: 0 0 18px; }
     .button {
-      display:block; width:min(86vw,340px); margin:10px auto; padding:14px 18px;
-      border-radius:10px; font-weight:700; font-size:16px; text-decoration:none; color:#fff;
+      display:block; width:min(86vw,340px);
+      margin: 10px auto; padding: 14px 18px;
+      border-radius: 12px; font-weight: 800; font-size: 16px;
+      text-decoration:none; color:#fff;
     }
-    .download { background:#3a3a3a; }
+    .download { background:#2f2f33; }
     .join { background:#7a45e5; font-size:18px; }
-    .footer { margin-top:14px; font-size:12px; color:#666; }
+    .footer { margin-top:14px; font-size:12px; color:#606068; }
   </style>
 </head>
 <body>
   <div class="screen">
-    <img class="puffin-front" src="puffin-front.png" alt="Puffin" />
+    <img class="logo-full" src="logo-full.png" alt="Puffin Clouds logo" />
     <div class="overlay">
       <div class="card">
         <h1>Puffin Clouds</h1>
