--- a/index.html
+++ b/index.html
@@ -6,47 +6,48 @@
   <title>Puffin Clouds – Telegram</title>
   <style>
     :root {
-      --card-width: min(92vw, 560px);
-      --logo-max: 620px;
-      --logo-vw: 64vw;
+      --logo-vw: 46vw;           /* trochę mniejsze niż 48vw, by dać więcej miejsca napisowi */
+      --logo-max: 500px;
+      --halo-vw: 52vw;
+      --card-w:  min(92vw, 560px);
     }
     html, body {
       margin: 0; padding: 0;
-      height: 100svh; overflow: hidden;             /* no scroll */
+      height: 100svh; overflow: hidden; /* bez przewijania */
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       background: #ece9f0 url('background.webp') no-repeat center center / cover;
     }
     .screen { position: relative; width:100%; height:100%; }
-    /* Full logo at the top, always visible */
+
+    .logo-halo {
+      position: fixed; top: 10px; left: 50%; transform: translateX(-50%);
+      width: min(var(--halo-vw), calc(var(--logo-max) * 1.06));
+      z-index: 5; opacity: .38; pointer-events: none; filter: blur(2px);
+    }
     .logo-full {
-      position: fixed; top: 12px; left: 50%; transform: translateX(-50%);
+      position: fixed; top: 4px; left: 50%; transform: translateX(-50%);
       width: min(var(--logo-vw), var(--logo-max));
-      max-width: var(--logo-max);
-      z-index: 10;
-      pointer-events: none;
+      z-index: 10; pointer-events: none;
       filter: drop-shadow(0 8px 18px rgba(0,0,0,.18));
     }
-    /* Center card under the logo, with strong readability */
     .overlay {
-      position: absolute; inset: 0;
-      display: grid; place-items: center;
-      padding-top: 12vh; /* room below the top logo */
+      position: absolute; inset: 0; display: grid; place-items: center;
+      padding-top: 18vh; /* więcej miejsca podnosi kartę niżej, z dala od logo */
     }
     .card {
-      width: var(--card-width);
+      width: var(--card-w);
       background: rgba(255,255,255,0.30);
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-      border-radius: 16px;
-      box-shadow: 0 6px 24px rgba(0,0,0,.16);
-      text-align: center;
-      color: #1f1f1f;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-radius: 18px;
+      box-shadow: 0 8px 28px rgba(0,0,0,.18);
+      text-align: center; color: #1f1f1f;
       padding: 22px 18px 24px;
     }
     h1 { margin: 4px 0 12px; font-size: 28px; letter-spacing: .2px; }
     p.description { color:#56565c; margin: 0 0 18px; }
     .button {
-      display:block; width:min(86vw,340px);
+      display:block; width:min(86vw, 340px);
       margin: 10px auto; padding: 14px 18px;
       border-radius: 12px; font-weight: 800; font-size: 16px;
       text-decoration:none; color:#fff;
@@ -58,9 +59,11 @@
 </head>
 <body>
   <div class="screen">
+    <img class="logo-halo" src="logo-halo.png" alt="" />
     <img class="logo-full" src="logo-full.png" alt="Puffin Clouds logo" />
     <div class="overlay">
       <div class="card">
+        <h1>Puffin Clouds</h1>
         <p class="description">Join our Telegram channel to stay up to date!</p>
         <p><strong>If you don’t have Telegram yet:</strong></p>
         <a class="button download" href="https://telegram.org/dl">Download Telegram</a>
