--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Puffin Clouds – Telegram</title>
   <style>
     :root {
-      --logo-vw: 46vw;           /* trochę mniejsze niż 48vw, by dać więcej miejsca napisowi */
+      --logo-vw: 46vw;            /* reasonable size */
       --logo-max: 500px;
       --halo-vw: 52vw;
       --card-w:  min(92vw, 560px);
     }
     html, body {
       margin: 0; padding: 0;
-      height: 100svh; overflow: hidden; /* bez przewijania */
+      height: 100svh; overflow: hidden;  /* no scroll */
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       background: #ece9f0 url('background.webp') no-repeat center center / cover;
     }
@@ -32,7 +32,7 @@
     }
     .overlay {
       position: absolute; inset: 0; display: grid; place-items: center;
-      padding-top: 18vh; /* więcej miejsca podnosi kartę niżej, z dala od logo */
+      padding-top: 18vh; /* keep card well below logo */
     }
     .card {
       width: var(--card-w);
