--- a/index.html
+++ b/index.html
@@ -4,56 +4,58 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Puffin Clouds – Telegram</title>
+  <meta name="color-scheme" content="light only" />
   <style>
     :root {
-      --logo-vw: 46vw;
-      --logo-max: 500px;
-      --halo-vw: 52vw;
+      --logo-vw: 44vw;           /* bigger top logo */
+      --logo-max: 460px;
+      --halo-vw: 50vw;
       --card-w:  min(92vw, 560px);
+      --brand-top: rgb(104, 104, 104);
+      --brand-bottom: rgb(96, 93, 103);
+      --brand-stroke: rgb(57, 55, 61);
     }
     html, body {
       margin: 0; padding: 0;
       height: 100svh; overflow: hidden;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       background: #ece9f0 url('background.webp') no-repeat center center / cover;
+      -webkit-tap-highlight-color: transparent;
     }
     .screen { position: relative; width:100%; height:100%; }
     .logo-halo {
-      position: fixed; top: 10px; left: 50%; transform: translateX(-50%);
-      width: min(var(--halo-vw), calc(var(--logo-max) * 1.06));
-      z-index: 5; opacity: .38; pointer-events: none; filter: blur(2px);
+      position: fixed; top: 6px; left: 50%; transform: translateX(-50%);
+      width: min(var(--halo-vw), calc(var(--logo-max) * 1.0));
+      z-index: 5; opacity: .32; pointer-events: none; filter: blur(1.6px);
     }
     .logo-full {
-      position: fixed; top: 4px; left: 50%; transform: translateX(-50%);
+      position: fixed; top: 0; left: 50%; transform: translateX(-50%);
       width: min(var(--logo-vw), var(--logo-max));
       z-index: 10; pointer-events: none;
-      filter: drop-shadow(0 8px 18px rgba(0,0,0,.18));
+      filter: drop-shadow(0 6px 14px rgba(0,0,0,.16));
     }
-    .overlay {
-      position: absolute; inset: 0; display: grid; place-items: center;
-      padding-top: 18vh;
-    }
+    .overlay { position: absolute; inset: 0; display: grid; place-items: center; padding-top: 15vh; }
     .card {
       width: var(--card-w);
-      background: rgba(255,255,255,0.30);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border-radius: 18px;
-      box-shadow: 0 8px 28px rgba(0,0,0,.18);
-      text-align: center; color: #1f1f1f;
-      padding: 22px 18px 24px;
+      background: rgba(255,255,255,0.28);
+      backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px);
+      border-radius: 18px; box-shadow: 0 6px 24px rgba(0,0,0,.16);
+      text-align: center; color: #1f1f1f; padding: 18px 14px 20px;
     }
-    h1 { margin: 4px 0 12px; font-size: 28px; letter-spacing: .2px; }
-    p.description { color:#56565c; margin: 0 0 18px; }
+    .logo-text-wrap { width: 100%; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; }
+    .logo-text-wrap svg { width: min(84vw, 540px); height: auto; display: block; }
+    p.description { color:#555a61; margin: 0 0 14px; }
     .button {
       display:block; width:min(86vw, 340px);
-      margin: 10px auto; padding: 14px 18px;
+      margin: 10px auto; padding: 13px 16px;
       border-radius: 12px; font-weight: 800; font-size: 16px;
       text-decoration:none; color:#fff;
+      transition: transform .08s ease-in-out;
     }
+    .button:active { transform: scale(0.98); }
     .download { background:#2f2f33; }
     .join { background:#7a45e5; font-size:18px; }
-    .footer { margin-top:14px; font-size:12px; color:#606068; }
+    .footer { margin-top:10px; font-size:12px; color:#5e5e68; }
   </style>
 </head>
 <body>
@@ -62,7 +64,27 @@
     <img class="logo-full" src="logo-full.png" alt="Puffin Clouds logo" />
     <div class="overlay">
       <div class="card">
-        <h1>Puffin Clouds</h1>
+        <div class="logo-text-wrap" aria-hidden="true">
+          <svg viewBox="0 0 1200 210" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Puffin Clouds">
+            <defs>
+              <linearGradient id="grad" x1="0%" y1="0%" x2="0%" y2="100%">
+                <stop offset="0%" stop-color="var(--brand-top)"/>
+                <stop offset="100%" stop-color="var(--brand-bottom)"/>
+              </linearGradient>
+              <filter id="shadow" x="-20%" y="-20%" width="140%" height="140%">
+                <feDropShadow dx="0" dy="2" stdDeviation="1.6" flood-color="rgba(0,0,0,0.24)"/>
+              </filter>
+            </defs>
+            <g filter="url(#shadow)">
+              <text x="50%" y="60%" dominant-baseline="middle" text-anchor="middle"
+                    font-family="'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif"
+                    font-weight="800" font-size="168"
+                    fill="url(#grad)" stroke="var(--brand-stroke)" stroke-width="3.6" paint-order="stroke">
+                Puffin Clouds
+              </text>
+            </g>
+          </svg>
+        </div>
         <p class="description">Join our Telegram channel to stay up to date!</p>
         <p><strong>If you don’t have Telegram yet:</strong></p>
         <a class="button download" href="https://telegram.org/dl">Download Telegram</a>
